_static/styles.css
/* match Google Docs styles for nested ordered lists */
article ol ol li {
  list-style-type: lower-alpha;
}
article ol ol ol li {
  list-style-type: lower-roman;
}

/* keep outputs from being too long */
.cell_output .output {
  max-height: 20rem;
  overflow-y: auto;

  /* for HTML outputs, go a bit longer, since this includes things like visualizations */
  &.text_html {
    max-height: 40rem;
  }
}

/* indicate the version by color, overriding the colors from sphinx-book-theme */
/* top nav bar */
.bd-header-article {
  --pst-color-background: {{color}};

  .btn {
    --pst-color-text-base: white;
    --pst-color-text-muted: white;
  }

  /* undo for dropdown menus */
  .dropdown-menu {
    --pst-color-background: white;

    .btn {
      --pst-color-text-base: #323232;
      --pst-color-text-muted: #646464;
    }
  }
}

